kvflowcontrol: [dnm] add basic store send stream token watcher impl
Introduce a basic implementation of the StoreStreamTokenWatcher
interface. The implementation will notify callers when there are tokens
available for a `WorkClass,SendTokenCounter` pair. The caller should
then attempt deducting tokens.

Epic: none
Release note: None

--- a/pkg/kv/kvserver/kvflowcontrol/kvflowconnectedstream/BUILD.bazel
+++ b/pkg/kv/kvserver/kvflowcontrol/kvflowconnectedstream/BUILD.bazel
@@ -10,12 +10,14 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/kv/kvserver/kvflowcontrol",
+        "//pkg/kv/kvserver/kvflowcontrol/kvflowcontroller",
         "//pkg/kv/kvserver/kvflowcontrol/kvflowcontrolpb",
         "//pkg/kv/kvserver/kvflowcontrol/kvflowtokentracker",
         "//pkg/raft/raftpb",
         "//pkg/raft/tracker",
         "//pkg/roachpb",
         "//pkg/util/admission/admissionpb",
+        "//pkg/util/stop",
         "//pkg/util/syncutil",
     ],
 )
